[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-dropbox"
authors = [
    {name = "Igor Plotnikov", email = "plotnikov.sseu@gmail.com"},
]
license = {text = "Apache License 2.0"}
description = "A sample Apache Airflow provider package built by Astronomer."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = ["version"]
requires-python = "~=3.9"
dependencies = ["apache-airflow>=2.4", "dropbox>=11.36.2"]

[project.urls]
Source = "https://github.com/iplotnikov-telemedicine/airflow-provider-dropbox/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_provider_dropbox.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*tests.*", "*tests"]